type module added on package.json

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "node.js tutorial",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "npm start"
   },
